# trip-advisor-sentiment-prediction

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: api.py  config.py  main.py
app/schemas/: __init__.py  predict.py
app/templates/: home.html
models/: model.pt  optimizer.pt
src/: bert.ipynb  predict.py  train.py  utils_dataset.py  utils_evaluation.py  utils_helper.py
src/config/: main.yaml  settings.py
